[tool.poetry]
name = "twitchloader"
version = "0.1.0"
description = "Download VOD videos and complete collections from Twitch.tv using youtube-dl"
authors = ["Quoorex"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
pyfiglet = "^0.8.post1"
youtube-dl = "^2020.3.24"
colorama = "^0.4.3"
python-twitch-client = "^0.6.0"
pyyaml = "^5.3.1"
configargparse = "^1.2.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
