[tool.poetry]
name = "twitchloader"
version = "0.1.0"
description = "Download VOD videos and complete collections from Twitch.tv using youtube-dl"
authors = ["Quoorex"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyfiglet = "^0.8.post1"
youtube-dl = "^2020.12.31"
colorama = "^0.4.4"
python-twitch-client = "^0.6.0"
pyyaml = "^5.4"
configargparse = "^1.2.3"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
